Clean up code add test case. Still can't get statistics.