@@ -30,16 +30,21 @@ import org.opendaylight.controller.md.sal.binding.api.ReadWriteTransaction;
 import org.opendaylight.controller.md.sal.common.api.data.LogicalDatastoreType;
 import org.opendaylight.yang.gen.v1.urn.ietf.params.xml.ns.yang.ietf.inet.types.rev130715.Uri;
 import org.opendaylight.yang.gen.v1.urn.ietf.params.xml.ns.yang.ietf.yang.types.rev130715.MacAddress;
-import org.opendaylight.yang.gen.v1.urn.nist.params.xml.ns.yang.nist.mud.device.association.rev170915.QuaranteneDevices;
-import org.opendaylight.yang.gen.v1.urn.nist.params.xml.ns.yang.nist.mud.device.association.rev170915.QuaranteneDevicesBuilder;
+import org.opendaylight.yang.gen.v1.urn.nist.params.xml.ns.yang.nist.mud.device.association.rev170915.QuarantineDevice;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.direct.statistics.rev160511.GetFlowStatisticsInputBuilder;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.direct.statistics.rev160511.GetFlowStatisticsOutput;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.direct.statistics.rev160511.GetNodeConnectorStatisticsInputBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.flow.inventory.rev130819.FlowCapableNode;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.flow.inventory.rev130819.tables.table.Flow;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.direct.statistics.rev160511.OpendaylightDirectStatisticsService;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.flow.statistics.rev130819.GetAggregateFlowStatisticsFromFlowTableForGivenMatchInputBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.flow.statistics.rev130819.GetAggregateFlowStatisticsFromFlowTableForGivenMatchOutput;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.flow.statistics.rev130819.GetFlowStatisticsFromFlowTableInputBuilder;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.flow.statistics.rev130819.GetAllFlowsStatisticsFromAllFlowTablesInputBuilder;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.flow.statistics.rev130819.flow.and.statistics.map.list.FlowAndStatisticsMapList;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.flow.statistics.rev130819.get.aggregate.flow.statistics.from.flow.table._for.given.match.output.AggregatedFlowStatistics;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.inventory.rev130819.NodeConnectorId;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.inventory.rev130819.NodeConnectorRef;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.inventory.rev130819.NodeRef;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.inventory.rev130819.nodes.NodeKey;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.ClearCacheOutput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.ClearCacheOutputBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.ClearMudRulesOutput;
@@ -49,12 +54,9 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.r
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetDstMacClassificationInput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetDstMacClassificationOutput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetDstMacClassificationOutputBuilder;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetSrcMacClassificationOutputBuilder;
-
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetFlowRulesInput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetFlowRulesOutput;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.get.flow.rules.output.*;
-
+import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetFlowRulesOutputBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetMudMetadataMappingInput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetMudMetadataMappingOutput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetMudMetadataMappingOutputBuilder;
@@ -62,29 +64,30 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.r
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetMudUnmappedAddressesOutputBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetPacketCountOutput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetPacketCountOutputBuilder;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetFlowRulesOutputBuilder;
-
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetQuarantineMacsOutput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetQuarantineMacsOutputBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetSrcMacClassificationInput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetSrcMacClassificationOutput;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.GetSrcMacClassificationOutputBuilder;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.QuarantineInput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.SdnmudService;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.UnquarantineInput;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.UnquarantineOutput;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.UnquarantineOutputBuilder;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.get.flow.rules.output.FlowRule;
+import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.sdnmud.rev170915.get.flow.rules.output.FlowRuleBuilder;
 import org.opendaylight.yangtools.yang.binding.InstanceIdentifier;
 import org.opendaylight.yangtools.yang.common.RpcResult;
 import org.opendaylight.yangtools.yang.common.RpcResultBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.google.common.util.concurrent.Futures;
 
 /**
  * @author mranga@nist.gov
  *
  */
 public class SdnmudServiceImpl implements SdnmudService {
-	
+
 	private static final Logger LOG = LoggerFactory.getLogger(SdnmudServiceImpl.class);
 
 	class CompletedFuture<T> implements Future<T> {
@@ -137,8 +140,8 @@ public class SdnmudServiceImpl implements SdnmudService {
 	@Override
 	public Future<RpcResult<GetPacketCountOutput>> getPacketCount() {
 		GetPacketCountOutputBuilder gpcob = new GetPacketCountOutputBuilder();
-		gpcob.setPacketCount(new Long(sdnmudProvider.getPacketInDispatcher().getPacketInCount(false)));
-		gpcob.setMudPacketCount(new Long(sdnmudProvider.getPacketInDispatcher().getMudPacketInCount(false)));
+		gpcob.setPacketCount(Long.valueOf(sdnmudProvider.getPacketInDispatcher().getPacketInCount(false)));
+		gpcob.setMudPacketCount(Long.valueOf(sdnmudProvider.getPacketInDispatcher().getMudPacketInCount(false)));
 		RpcResult<GetPacketCountOutput> result = RpcResultBuilder.success(gpcob).build();
 		return new CompletedFuture<RpcResult<GetPacketCountOutput>>(result);
 	}
@@ -205,7 +208,7 @@ public class SdnmudServiceImpl implements SdnmudService {
 		String[] pieces = mm.split("/");
 		String m = pieces[0].substring(2);
 		String mask = pieces[1].substring(2);
-	
+
 		BigInteger metadata = new BigInteger(m, 16);
 		BigInteger metadataMask = new BigInteger(mask, 16);
 		BigInteger maskedMetadata = metadata.and(metadataMask);
@@ -226,28 +229,28 @@ public class SdnmudServiceImpl implements SdnmudService {
 		long dstQuranteneFlag = maskedMetadata.and(SdnMudConstants.DST_QURANTENE_MASK)
 				.shiftRight(SdnMudConstants.DST_QUARANTENE_FLAGS_SHIFT).longValue();
 		GetMudMetadataMappingOutputBuilder outputBuilder = new GetMudMetadataMappingOutputBuilder();
-		if (metadataMask.and(SdnMudConstants.SRC_MANUFACTURER_MASK).longValue() > 0) {
+		if (metadataMask.and(SdnMudConstants.SRC_MANUFACTURER_MASK).longValue() != 0) {
 			outputBuilder.setSrcManufacturer(IdUtils.getManufacturer((int) srcManufacturerId));
 		}
-		if (metadataMask.and(SdnMudConstants.DST_MANUFACTURER_MASK).longValue() > 0) {
+		if (metadataMask.and(SdnMudConstants.DST_MANUFACTURER_MASK).longValue() != 0) {
 			outputBuilder.setDstManufacturer(IdUtils.getManufacturer((int) dstManufacturerId));
 		}
-		if (metadataMask.and(SdnMudConstants.SRC_MODEL_MASK).longValue() > 0) {
+		if (metadataMask.and(SdnMudConstants.SRC_MODEL_MASK).longValue() != 0) {
 			outputBuilder.setSrcModel(IdUtils.getModel((int) srcModelId));
 		}
-		if (metadataMask.and(SdnMudConstants.DST_MODEL_MASK).longValue() > 0) {
+		if (metadataMask.and(SdnMudConstants.DST_MODEL_MASK).longValue() != 0) {
 			outputBuilder.setDstModel(IdUtils.getModel((int) dstModelId));
 		}
-		if (metadataMask.and(SdnMudConstants.SRC_NETWORK_MASK).longValue() > 0) {
+		if (metadataMask.and(SdnMudConstants.SRC_NETWORK_MASK).longValue() != 0) {
 			outputBuilder.setDstLocalNetworksFlag(srcLocalNetworksFlag > 0 ? true : false);
 		}
-		if (metadataMask.and(SdnMudConstants.DST_NETWORK_MASK).longValue() > 0) {
+		if (metadataMask.and(SdnMudConstants.DST_NETWORK_MASK).longValue() != 0) {
 			outputBuilder.setDstLocalNetworksFlag(dstLocalNetworksFlag > 0 ? true : false);
 		}
-		if (metadataMask.and(SdnMudConstants.SRC_QUARANTENE_MASK).longValue() > 0) {
+		if (metadataMask.and(SdnMudConstants.SRC_QUARANTENE_MASK).longValue() != 0) {
 			outputBuilder.setSrcQuarantineFlag(srcQuarantineFlag > 0 ? true : false);
 		}
-		if (metadataMask.and(SdnMudConstants.DST_QURANTENE_MASK).longValue() > 0) {
+		if (metadataMask.and(SdnMudConstants.DST_QURANTENE_MASK).longValue() != 0) {
 			outputBuilder.setDstQuarantineFlag(dstQuranteneFlag > 0 ? true : false);
 		}
 		RpcResult<GetMudMetadataMappingOutput> result = RpcResultBuilder.success(outputBuilder).build();
@@ -256,51 +259,11 @@ public class SdnmudServiceImpl implements SdnmudService {
 	}
 
 	@Override
-	public Future<RpcResult<UnquarantineOutput>> unquarantine(UnquarantineInput input) {
-		MacAddress macAddress = input.getDeviceMacAddress();
-		QuaranteneDevices quaranteneDevices = sdnmudProvider.getQuaranteneDevicesListener().getQuaranteneDevices();
-		boolean found = false;
-		if (quaranteneDevices != null) {
-			List<MacAddress> macAddresses = sdnmudProvider.getQuaranteneDevicesListener().getQuaranteneDevices()
-					.getQuranteneMacs();
-			if (macAddresses != null) {
-
-				for (MacAddress address : macAddresses) {
-					if (address.equals(macAddress)) {
-						found = true;
-						macAddresses.remove(macAddress);
-						break;
-					}
-				}
-
-				if (found) {
-					QuaranteneDevicesBuilder qdb = new QuaranteneDevicesBuilder();
-					qdb.setQuranteneMacs(macAddresses);
-					InstanceIdentifier<QuaranteneDevices> qId = InstanceIdentifier.builder(QuaranteneDevices.class)
-							.build();
-					ReadWriteTransaction tx = sdnmudProvider.getDataBroker().newReadWriteTransaction();
-					tx.merge(LogicalDatastoreType.CONFIGURATION, qId, qdb.build());
-					tx.submit();
-					// Clear the flow rules so we can get a packet in to reclassify the packets.
-					this.sdnmudProvider.getPacketInDispatcher().clearMfgModelRules();
-				}
-			}
-		}
-		UnquarantineOutputBuilder unquarantineOutput = new UnquarantineOutputBuilder();
-		unquarantineOutput.setSuccess(found);
-		RpcResult<UnquarantineOutput> result = RpcResultBuilder.success(unquarantineOutput).build();
-
-		return new CompletedFuture<RpcResult<UnquarantineOutput>>(result);
-	}
-
-	@Override
 	public Future<RpcResult<GetQuarantineMacsOutput>> getQuarantineMacs() {
 		GetQuarantineMacsOutputBuilder outputBuilder = new GetQuarantineMacsOutputBuilder();
-		if (sdnmudProvider.getQuaranteneDevicesListener().getQuaranteneDevices() != null) {
-			List<MacAddress> macAddresses = sdnmudProvider.getQuaranteneDevicesListener().getQuaranteneDevices()
-					.getQuranteneMacs();
-			outputBuilder.setMacAddresses(macAddresses);
-		}
+		List<MacAddress> quarantineAddresses = sdnmudProvider.getQuaranteneDevicesListener().getQuaranteneDevices()
+				.getQurantineMac();
+		outputBuilder.setMacAddresses(quarantineAddresses);
 		RpcResult<GetQuarantineMacsOutput> result = RpcResultBuilder.success(outputBuilder).build();
 		return new CompletedFuture<RpcResult<GetQuarantineMacsOutput>>(result);
 	}
@@ -339,62 +302,73 @@ public class SdnmudServiceImpl implements SdnmudService {
 							.shiftRight(SdnMudConstants.SRC_QUARANTENE_MASK_SHIFT).longValue();
 					long dstQuranteneFlag = maskedMetadata.and(SdnMudConstants.DST_QURANTENE_MASK)
 							.shiftRight(SdnMudConstants.DST_QUARANTENE_FLAGS_SHIFT).longValue();
-					if (metadataMask.and(SdnMudConstants.SRC_MANUFACTURER_MASK).longValue() > 0) {
+					if (metadataMask.and(SdnMudConstants.SRC_MANUFACTURER_MASK).longValue() != 0) {
 						frBuilder.setSrcManufacturer(IdUtils.getManufacturer((int) srcManufacturerId));
 					}
-					if (metadataMask.and(SdnMudConstants.DST_MANUFACTURER_MASK).longValue() > 0) {
+					if (metadataMask.and(SdnMudConstants.DST_MANUFACTURER_MASK).longValue() != 0) {
 						frBuilder.setDstManufacturer(IdUtils.getManufacturer((int) dstManufacturerId));
 					}
-					if (metadataMask.and(SdnMudConstants.SRC_MODEL_MASK).longValue() > 0) {
+					if (metadataMask.and(SdnMudConstants.SRC_MODEL_MASK).longValue() != 0) {
 						frBuilder.setSrcModel(IdUtils.getModel((int) srcModelId));
 					}
-					if (metadataMask.and(SdnMudConstants.DST_MODEL_MASK).longValue() > 0) {
+					if (metadataMask.and(SdnMudConstants.DST_MODEL_MASK).longValue() != 0) {
 						frBuilder.setDstModel(IdUtils.getModel((int) dstModelId));
 					}
-					if (metadataMask.and(SdnMudConstants.SRC_NETWORK_MASK).longValue() > 0) {
+					if (metadataMask.and(SdnMudConstants.SRC_NETWORK_MASK).longValue() != 0) {
 						frBuilder.setDstLocalNetworksFlag(srcLocalNetworksFlag > 0 ? true : false);
 					}
-					if (metadataMask.and(SdnMudConstants.DST_NETWORK_MASK).longValue() > 0) {
+					if (metadataMask.and(SdnMudConstants.DST_NETWORK_MASK).longValue() != 0) {
 						frBuilder.setDstLocalNetworksFlag(dstLocalNetworksFlag > 0 ? true : false);
 					}
-					if (metadataMask.and(SdnMudConstants.SRC_QUARANTENE_MASK).longValue() > 0) {
+					if (metadataMask.and(SdnMudConstants.SRC_QUARANTENE_MASK).longValue() != 0) {
 						frBuilder.setSrcQuarantineFlag(srcQuarantineFlag > 0 ? true : false);
 					}
-					if (metadataMask.and(SdnMudConstants.DST_QURANTENE_MASK).longValue() > 0) {
+					if (metadataMask.and(SdnMudConstants.DST_QURANTENE_MASK).longValue() != 0) {
 						frBuilder.setDstQuarantineFlag(dstQuranteneFlag > 0 ? true : false);
 					}
-
-					GetAggregateFlowStatisticsFromFlowTableForGivenMatchInputBuilder flowStatsInputBuilder = new GetAggregateFlowStatisticsFromFlowTableForGivenMatchInputBuilder();
-					flowStatsInputBuilder.setMatch(flow.getMatch());
-					NodeRef nodeRef = new NodeRef(node);
-					flowStatsInputBuilder.setNode(nodeRef);
-
+					
+					
+                  /*  
+                   * This refuses to work. Need to fix.
+                   *
 					try {
-						GetAggregateFlowStatisticsFromFlowTableForGivenMatchOutput statsOutput = sdnmudProvider
-								.getFlowStatisticsService()
-								.getAggregateFlowStatisticsFromFlowTableForGivenMatch(flowStatsInputBuilder.build())
-								.get().getResult();
-						List<AggregatedFlowStatistics> flowStats = statsOutput.getAggregatedFlowStatistics();
-						// There should be only one flow matching the criterion.
-						if ( flowStats.size() > 1) {
-							LOG.error("Unexpected flow stats length!");
-						}
-						
-						for (AggregatedFlowStatistics flowStat : flowStats) {
-							if (flowStat.getByteCount() != null) {
-								frBuilder.setByteCount(flowStat.getByteCount().getValue());
-							}
-							if (flowStat.getPacketCount() != null) {
-								frBuilder.setPacketCount(flowStat.getPacketCount().getValue());
-							}
-						}
+						NodeRef nodeRef = new NodeRef(node);
 
-					} catch (InterruptedException | ExecutionException e) {
-						LOG.error("Error getting flow stats",e);
+						GetFlowStatisticsInputBuilder inputBuilder = new GetFlowStatisticsInputBuilder();
+
+						inputBuilder.setFlowName(flow.getFlowName());
+						inputBuilder.setMatch(flow.getMatch());
+						inputBuilder.setTableId(flow.getTableId());
+						inputBuilder.setInstructions(flow.getInstructions());
+						inputBuilder.setNode(nodeRef);
+			
+
+
+						GetFlowStatisticsOutput output = sdnmudProvider.getDirectStatisticsService()
+								.getFlowStatistics(inputBuilder.build()).get().getResult();
+						LOG.info("flowstatisticsMapList : " + output.getFlowAndStatisticsMapList().size());
+						for (FlowAndStatisticsMapList fmaplist : output.getFlowAndStatisticsMapList()) {
+							frBuilder.setPacketCount(fmaplist.getPacketCount().getValue());
+							frBuilder.setByteCount(fmaplist.getByteCount().getValue());
+						}
+					} catch (Exception ex) {
+						LOG.error("Exception getting flow stats ", ex);
 					}
+						
+					GetAllFlowsStatisticsFromAllFlowTablesInputBuilder ib = new GetAllFlowsStatisticsFromAllFlowTablesInputBuilder();
+					ib.setNode(new NodeRef(node));
+					
+					try {
+						sdnmudProvider.getFlowStatisticsService().getAllFlowsStatisticsFromAllFlowTables(ib.build()).get();
+					} catch (InterruptedException | ExecutionException e) {
+						LOG.error("Exception in getting stats ", e);
+					}
+					*/
+                    
 					frBuilder.setFlowId(flow.getId().getValue());
 					frBuilder.setTableId(Long.valueOf(flow.getTableId()));
-					frBuilder.setFlowRule(flow.getInstructions().toString());
+					//frBuilder.setFlowRule(flow.toString());
+					frBuilder.setFlowName(flow.getFlowName());
 					flowRules.add(frBuilder.build());
 
 				}
@@ -411,7 +385,7 @@ public class SdnmudServiceImpl implements SdnmudService {
 			GetDstMacClassificationInput input) {
 		String macAddress = input.getMacAddress().getValue();
 		BigInteger maskedMetadata = this.sdnmudProvider.getPacketInDispatcher().getDstMetadata(macAddress);
-		
+
 		GetDstMacClassificationOutputBuilder outputBuilder = new GetDstMacClassificationOutputBuilder();
 		if (maskedMetadata != null) {
 			long dstManufacturerId = maskedMetadata.and(SdnMudConstants.DST_MANUFACTURER_MASK)
@@ -425,7 +399,7 @@ public class SdnmudServiceImpl implements SdnmudService {
 			outputBuilder.setMetadata(maskedMetadata.toString(16));
 			outputBuilder.setDstLocalNetworksFlag(dstLocalNetworksFlag != 0 ? true : false);
 			outputBuilder.setDstManufacturer(IdUtils.getManufacturer((int) dstManufacturerId));
-			outputBuilder.setDstQuarantineFlag(dstQuranteneFlag == 0 ? false: true);
+			outputBuilder.setDstQuarantineFlag(dstQuranteneFlag == 0 ? false : true);
 			outputBuilder.setDstModel(new Uri(IdUtils.getModel((int) dstModelId)));
 		}
 		RpcResult<GetDstMacClassificationOutput> result = RpcResultBuilder.success(outputBuilder).build();
@@ -435,10 +409,9 @@ public class SdnmudServiceImpl implements SdnmudService {
 	@Override
 	public Future<RpcResult<GetSrcMacClassificationOutput>> getSrcMacClassification(
 			GetSrcMacClassificationInput input) {
-		// TODO Auto-generated method stub
 		String macAddress = input.getMacAddress().getValue();
 		BigInteger maskedMetadata = this.sdnmudProvider.getPacketInDispatcher().getSrcMetadata(macAddress);
-		
+
 		GetSrcMacClassificationOutputBuilder outputBuilder = new GetSrcMacClassificationOutputBuilder();
 		if (maskedMetadata != null) {
 			long srcManufacturerId = maskedMetadata.and(SdnMudConstants.SRC_MANUFACTURER_MASK)
@@ -449,15 +422,56 @@ public class SdnmudServiceImpl implements SdnmudService {
 					.shiftRight(SdnMudConstants.SRC_QUARANTENE_MASK_SHIFT).longValue();
 			long srcLocalNetworksFlag = maskedMetadata.and(SdnMudConstants.SRC_NETWORK_MASK)
 					.shiftRight(SdnMudConstants.SRC_NETWORK_FLAGS_SHIFT).longValue();
-			
+
 			outputBuilder.setMetadata(maskedMetadata.toString(16));
 			outputBuilder.setSrcLocalNetworksFlag(srcLocalNetworksFlag != 0 ? true : false);
 			outputBuilder.setSrcManufacturer(IdUtils.getManufacturer((int) srcManufacturerId));
-			outputBuilder.setSrcQuarantineFlag(srcQuranteneFlag == 0 ? false: true);
+			outputBuilder.setSrcQuarantineFlag(srcQuranteneFlag == 0 ? false : true);
 			outputBuilder.setSrcModel(new Uri(IdUtils.getModel((int) srcModelId)));
 		}
 		RpcResult<GetSrcMacClassificationOutput> result = RpcResultBuilder.success(outputBuilder).build();
 		return new CompletedFuture<RpcResult<GetSrcMacClassificationOutput>>(result);
+	}
+
+	@Override
+	public Future<RpcResult<Void>> quarantine(QuarantineInput input) {
+		MacAddress srcMac = input.getDeviceMacAddress();
+		QuarantineDevice qd = sdnmudProvider.getQuaranteneDevicesListener().getQuaranteneDevices();
+		if (!qd.getQurantineMac().contains(srcMac)) {
+			qd.getQurantineMac().add(srcMac);
+			InstanceIdentifier<QuarantineDevice> qId = InstanceIdentifier.builder(QuarantineDevice.class).build();
+			ReadWriteTransaction tx = sdnmudProvider.getDataBroker().newReadWriteTransaction();
+			// PUT not merge -- override existing value.
+			tx.put(LogicalDatastoreType.CONFIGURATION, qId, qd);
+			tx.submit();
+		}
+		return Futures.immediateFuture(RpcResultBuilder.<Void>success().build());
+	}
+
+	@Override
+	public Future<RpcResult<Void>> unquarantine(UnquarantineInput input) {
+		MacAddress srcMac = input.getDeviceMacAddress();
+		QuarantineDevice qd = sdnmudProvider.getQuaranteneDevicesListener().getQuaranteneDevices();
+		if (qd.getQurantineMac().contains(srcMac)) {
+			qd.getQurantineMac().remove(srcMac);
+			InstanceIdentifier<QuarantineDevice> qId = InstanceIdentifier.builder(QuarantineDevice.class).build();
+			ReadWriteTransaction tx = sdnmudProvider.getDataBroker().newReadWriteTransaction();
+			tx.put(LogicalDatastoreType.CONFIGURATION, qId, qd);
+			tx.submit();
+		}
+		return Futures.immediateFuture(RpcResultBuilder.<Void>success().build());
+
+	}
+
+	@Override
+	public Future<RpcResult<Void>> unquarantineAll() {
+		QuarantineDevice qd = sdnmudProvider.getQuaranteneDevicesListener().getQuaranteneDevices();
+		qd.getQurantineMac().clear();
+		InstanceIdentifier<QuarantineDevice> qId = InstanceIdentifier.builder(QuarantineDevice.class).build();
+		ReadWriteTransaction tx = sdnmudProvider.getDataBroker().newReadWriteTransaction();
+		tx.put(LogicalDatastoreType.CONFIGURATION, qId, qd);
+		tx.submit();
+		return Futures.immediateFuture(RpcResultBuilder.<Void>success().build());
 	}
 
 }
